--- a/arch/arm64/configs/rk3399_sogou_defconfig
+++ b/arch/arm64/configs/rk3399_sogou_defconfig
@@ -122,8 +122,9 @@ CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_HIDP=y
 CONFIG_BT_HS=y
 CONFIG_BT_HCIBTUSB=y
-CONFIG_BT_HCIUART=y
+CONFIG_BT_HCIUART=m
 CONFIG_BT_HCIUART_ATH3K=y
+CONFIG_BT_HCIUART_BCM=y
 CONFIG_BT_HCIBFUSB=y
 CONFIG_BT_HCIVHCI=y
 CONFIG_BT_MRVL=y
@@ -217,6 +218,7 @@ CONFIG_SERIAL_8250_NR_UARTS=32
 CONFIG_SERIAL_8250_RUNTIME_UARTS=15
 CONFIG_SERIAL_8250_DW=y
 CONFIG_SERIAL_OF_PLATFORM=y
+CONFIG_SERIAL_DEV_BUS=y
 CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_ROCKCHIP=y
 CONFIG_TCG_TPM=y
@@ -317,11 +319,6 @@ CONFIG_DRM_SII902X=y
 CONFIG_DRM_DW_HDMI_I2S_AUDIO=y
 CONFIG_DRM_DW_HDMI_CEC=y
 CONFIG_DRM_PANFROST=y
-CONFIG_MALI400=y
-CONFIG_MALI450=y
-# CONFIG_MALI400_PROFILING is not set
-CONFIG_MALI_SHARED_INTERRUPTS=y
-CONFIG_MALI_DT=y
 CONFIG_MALI_DEVFREQ=y
 CONFIG_MALI_MIDGARD=y
 CONFIG_MALI_EXPERT=y
